Styling fixes, image gaps

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -274,6 +274,7 @@ iframe {
 .ctx-promo {
 
     img {
+        display: block;
         width: 100%;
         height: auto;
         max-height: 100px;
@@ -444,7 +445,7 @@ iframe {
         align-items: center;
         justify-content: flex-end;
         width: 100%;
-        padding: 15px 0 25px 0;
+        padding: 25px 0 25px 0;
         margin: 0 0 25px 0;
         border-bottom: solid 1px #ddd;
 
@@ -716,10 +717,11 @@ iframe {
         cursor: pointer;
 
         img {
+            display: block;
             width: 100%;
             height: 100%;
             max-height: 260px;
-            margin: 20px 0 10px 0;
+            margin: 20px 0 0 0;
             border-radius: 10px;
             object-fit: cover;
             transition: ease .2s;
@@ -745,6 +747,7 @@ iframe {
 
 .ctx-profile-img {
     position: relative;
+    display: block;
     text-align: center;
     width: min-content;
     transition: ease .2s;
@@ -764,6 +767,7 @@ iframe {
     }*/
 
     img {
+        display: block;
         width: 60px;
         height: 60px;
         border-radius: 100px;
@@ -775,6 +779,7 @@ iframe {
     }
 
     .comment-img {
+        display: block;
         width: 50px;
         height: 50px;
         margin: 10px 0;
@@ -801,6 +806,7 @@ iframe {
 
         img {
             position: absolute;
+            display: block;
             width: 32px;
             height: 32px;
             z-index: 9;
@@ -814,6 +820,7 @@ iframe {
 
         .comment-img {
             position: relative;
+            display: block;
             width: 32px;
             height: 32px;
             left: 3px;
@@ -1283,6 +1290,7 @@ iframe {
         padding: 0 15px;
 
         img {
+            display: block;
             width: 140px;
             height: auto;
             padding: 15px;
@@ -1347,6 +1355,7 @@ iframe {
             padding: 0 10px;
 
             img {
+                display: block;
                 width: 100px;
             }
         }
@@ -1785,6 +1794,7 @@ button:hover {
     cursor: pointer;
 
     img {
+        display: block;
         max-width: 1100px;
         max-height: 800px;
         width: auto;
@@ -1822,6 +1832,7 @@ button:hover {
     .lightbox {
 
         img {
+            display: block;
             max-width: 100%;
         }
     }
@@ -2057,6 +2068,7 @@ button:hover {
     align-items: center;
 
     img {
+        display: block;
         width: 25px;
         height: 25px;
         margin-right: 6px;
@@ -2574,6 +2586,7 @@ button:hover {
 
 .ctx-youtube-post {
     position: relative;
+    display: block;
     width: 100%;
     min-height: 320px;
     border: none;
